# mindloft

./: .gitignore  ABOUT.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ONI_NEXUS.md  PROGRESS.md  README.md  SECURITY.md  brand.json  prd.json  repo-metadata.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/security-audit/: README.md  install.sh
.github/workflows/: accessibility.yml  publish.yml  qa.yml  security-audit.yml  security.yml  tests.yml  validate-docs.yml
MAIN/: ACADEMIC_LANDSCAPE.md  INDEX.md  NEUROETHICS_ALIGNMENT.md  ONI_LAYERS.md  PARTNERSHIPS.md  RELATED_WORK.md  TRANSPARENCY.md  brand.json
MAIN/framework-v2/: 01-WHY-REVAMP.md  08-QUANTUM-INTEGER.md  README.md
MAIN/governance/: ACCESSIBILITY.md  TRANSPARENCY.md
MAIN/interactive-concept-demo/: README.md
MAIN/interactive-oni-visualizations/: 03-neural-killchain-visualizer.html
MAIN/oni-academy/: README.md  pyproject.toml
MAIN/oni-framework/: ONI_LAYERS.md  README.md  pyproject.toml
MAIN/oni-framework/oni/: __init__.py  brand.py  coherence.py  firewall.py  layers.py  scale_freq.py
MAIN/oni-framework/oni/ui/: app.py  styles.py
MAIN/oni-framework/tests/: test_layers.py
MAIN/oni-framework/tests/neurosecurity/: test_anonymizer.py
MAIN/project/: KANBAN.md  OBSIDIAN_TASKS_2026-01-25.md  PROJECT_MANAGEMENT.md  prd.json
MAIN/resources/: brand.json
MAIN/tara-neural-security-platform/: AGENTS.md  (+3 more)
ai-working/: AI-TRANSPARENCY.md  PROPAGATION.md  QI-FIELDJOURNAL.md  QIF-DERIVATION-LOG.md  QIF-FIELD-JOURNAL.md  QIF-NARRATIVE.md  QIF-RESEARCH-SOURCES.md  QIF-TRUTH.md  QIF-WHITEPAPER-v5.md  about_content.md  auto_publish.py  medium_sync.py  medium_sync_public.py  medium_template_v2.py  research_sync.py  resume.md  yale-email-draft.md
autodidact/: README.md  pyproject.toml
docs/: SIGNAL_VISUALIZATION_DESIGN.md  WHY_WAVES_ARE_CIRCLES.md  content-manifest.json  index.html
neurosec-research/: PARTNERSHIPS.md
neurosecurity/: README.md
notes/: About Me: The ONI Project.gdoc  How would a device like Neuralink cure Alzheimer’s?.gdoc  Ideas braindump for research and paper (addt'ls).gdoc  Is BCIs the beginning of Internet 5.0?.gdoc  Quantum Tunneling- the future of VPNs.gdoc
oni-demo-video/: package-lock.json  package.json
wip/: ONI_Whitepaper_v1.md  qif-3d-model.html
(+349 files in other folders)
