[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oni-framework"
version = "0.1.0"
description = "Organic Neural Interface Framework - Security library for brain-computer interfaces"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kevin L. Qi", email = "kevin@example.com"}
]
maintainers = [
    {name = "Kevin L. Qi", email = "kevin@example.com"}
]
keywords = [
    "brain-computer-interface",
    "BCI",
    "neural-security",
    "neuroscience",
    "cybersecurity",
    "signal-processing",
    "coherence",
    "neural-firewall",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
viz = [
    "matplotlib>=3.5",
    "numpy>=1.21",
]
all = [
    "oni-framework[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/qikevinl/ONI"
Documentation = "https://github.com/qikevinl/ONI/tree/main/MAIN/oni-framework"
Repository = "https://github.com/qikevinl/ONI"
Issues = "https://github.com/qikevinl/ONI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["oni*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
